# -freebuff2api-vercel-python

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json  启动命令.txt  域名配置.txt  配置信息.txt
.vercel/: project.json
api/: index.py
freebuff2api/: __init__.py  admin.py  anthropic_compat.py  app.py  codebuff.py  config.py  logging_config.py  models.py  openai_compat.py  sse.py  token_rotation.py  upstream_fingerprint.py
freebuff2api/admin_static/: index.html
tests/: test_admin.py  test_app_errors.py  test_codebuff_client.py  test_config.py  test_logging_config.py  test_openai_compat.py  test_sessions.py  test_streaming.py  test_token_web.py  test_upstream_fingerprint.py
tool/: auto_token.py  get_token.py
tool/web/: main.py
tool/web/static/: style.css
tool/web/templates/: auto.html  index.html
